@@ -1,5 +1,6 @@
 * Get rid of short open tags
 * Fixing set timezone per user by page controler 
+* filter widget allow multiple selects
 
 Version 1.0.9
 =============
